--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ css: ['index.css', 'sidebar-popular-repo.css']
     <div class="container">
         <h1>{{ site.title }}</h1>
         <div id="jumbotron-meta-info">
-            <span class="meta-info">
+            <span class="meta-info hvr-grow">
                 <span class="octicon octicon-location"></span>
-                {{ site.location }}
+                <a href="{{ site.location_url }}" target="_blank">{{ site.location }}</a>
+                <!-- {{ site.location }} -->
             </span>
             <span class="meta-info hvr-grow">
                 <span class="octicon octicon-organization"></span>
