--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@ css: ['index.css', 'sidebar-popular-repo.css']
             {% include disqus-comments.html %}
 
         </div>
-
+        
+        {% include sidebar-search.html %}
         <div class="col-md-4">
             {% include sidebar-popular-repo.html %}
         </div>
